--- a/client/unspeakable.css
+++ b/client/unspeakable.css
@@ -21,3 +21,7 @@ div.card.currentPlayer.me
 .comment.highlight {
     background-color: yellow !important;
 }
+
+#letter.used {
+    background-color: lightblue;
+}
