Don't allow zero length chat messages; highlight new messages by injecting an _id into the messages (blaze uses this)

--- a/client/unspeakable.css
+++ b/client/unspeakable.css
@@ -25,3 +25,7 @@ div.card.currentPlayer.me
 #letter.used {
     background-color: lightblue;
 }
+
+.ui.comments .comment {
+    min-height: 35px;
+}
